# Firmware-trial

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TESTPLAN.md
.claude/: settings.json
docs/: DECISIONS.md  DESIGN.md  GOALS.md  IMPLEMENTATION.md  LEARNINGS.md  OUTCOMES.md  PLAN-v0.3.md  PRD.md  RETROSPECTIVE.md  ROADMAP.md  SCENARIOS.md  STATUS.md
firmware/app/: CircleCanvas.h  Config.cpp  Config.h  DecodeCore.h  FileLogDevice.h  Makefile  SdPhotoSource.h  kernel.cpp  kernel.h  lumen.conf  main.cpp  version.h
firmware/src/app/: PluginScheduler.h
firmware/src/content/: ExifReader.cpp  ExifReader.h  IPhotoSource.h  JpegDecoder.cpp  JpegDecoder.h  stb_image_impl.c  test_image.h
firmware/src/core/: Error.h  EventBus.h  Result.h
firmware/src/display/: ICanvas.h  ScreenPlugin.h
firmware/src/net/: README.md  dhcpd.cpp  dhcpd.h  dnsd.cpp  dnsd.h  webserver.cpp  webserver.h
firmware/src/plugins/: ClockPlugin.cpp  ClockPlugin.h  PhotoFramePlugin.cpp  PhotoFramePlugin.h
firmware/src/util/: RingBuffer.h  Sha256.cpp  Sha256.h  libc_compat.c
tests/host/: CMakeLists.txt  test_eventbus.cpp  test_exif.cpp  test_framework.h  test_main.cpp  test_plugin_scheduler.cpp  test_ringbuffer.cpp  test_sha256.cpp
tools/: _addr.sh  _resize_dir.sh  gen_test_asset.sh  make_sd.sh  make_sd_from.sh  qemu_capture_png.sh  run_host_tests.sh  run_qemu.sh  stage_sdcard.sh
